# sponza

./: CMakeLists.txt
cmake/modules/: FindGLFW3.cmake
data/: hdr.frag  hdr.vert  normal_map_render.frag  normal_map_render.vert  render.frag  render.vert  shadow.frag  shadow.geom  shadow.vert  skybox.frag  skybox.vert
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: bounding_volume.cpp  bounding_volume.h  camera.cpp  camera.h  hdr.cpp  hdr.h  light.cpp  light.h  loader.cpp  loader.h  main.cpp  material.h  mesh.cpp  mesh.h  resource.cpp  resource.h  shader.h  shadow_map.cpp  shadow_map.h  skybox.cpp  skybox.h  uniforms.cpp  uniforms.h
